\name{NEWS}
\title{News for Package \pkg{OutSplice}}

\section{Changes in version 0.99.0 (2023-01-06)}{
  \itemize{
    \item Submitted to Bioconductor
  }
}

\section{Changes in version 0.99.1 (2023-02-27)}{
  \itemize{
    \item Fixed Bioc-devel mailing list registration and added package to Watched Tags
  }
}

\section{Changes in version 0.99.2 (2023-03-22)}{
  \itemize{
    \item Numerous changes to address comments made during the review process
  }
}

\section{Changes in version 0.99.3 (2023-03-28)}{
  \itemize{
    \item Added BiocGenerics to Description and import statements
  }
}

\section{Changes in version 0.99.4 (2023-03-29)}{
  \itemize{
    \item Correct error with BiocGenerics exported functions
  }
}

\section{Changes in version 0.99.5 (2023-03-29)}{
  \itemize{
    \item Correct package for build report
  }
}

\section{Changes in version 0.99.6 (2023-04-06)}{
  \itemize{
    \item Add options to specificy row name columns
    \item Return function output in addition to saving output files
  }
}

\section{Changes in version 0.99.7 (2023-04-07)}{
  \itemize{
    \item Add value section to overview man page
  }
}

\section{Changes in version 0.99.8 (2023-04-11)}{
  \itemize{
    \item Fixed error that occured when no significant outliers were present
  }
}

\section{Changes in version 0.99.9 (2023-04-17)}{
  \itemize{
    \item Fixed issue when assigning gene ids
  }
}