@@ -6,9 +6,7 @@ subset_underEx <- function(FisherAnalyses, p_value) {
         toplist10 <- toplist10[toplist10[, "FisherP1"] < p_value, ]
         toplist10 <- subset(toplist10, select = FisherP1)
     } else {
-        toplist10 <- toplist10[toplist10[, "FisherP1"] > p_value, ]
-        toplist10 <- subset(toplist10, select = FisherP1)
-        message("no under expression outliers")
+        toplist10 <- NULL
     }
     return(toplist10)
 }
