@@ -61,3 +61,9 @@
     \item Fixed issue when assigning gene ids
   }
 }
+
+\section{Changes in version 1.00.1 (2023-06-21)}{
+  \itemize{
+    \item Fixed issue where nonsignificant events would be listed in ASE.types when no under-expressed outliers were found
+  }
+}
